--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -32,10 +32,10 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
-            android:layout_marginBottom="10dp"
-            android:layout_marginTop="10dp"
-            android:height="15dp"
-            android:width="30dp" />
+            android:layout_marginBottom="30dp"
+            android:layout_marginTop="30dp" />
+<!--             android:height="15dp"
+            android:width="30dp" -->
     </LinearLayout>
 
 </RelativeLayout>
